fix: Build architecture-specific macOS binaries for electron-builder
- Build both amd64 and arm64 binaries for macOS
- Remove universal target (not compatible with architecture-specific binaries)
- Update main.js to use architecture-specific binaries on macOS
- Configure x64ArchFiles for proper universal build handling

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -462,10 +462,14 @@ jobs:
             -ldflags="-s -w -X main.Version=${VERSION} -X main.BuildTime=${BUILD_TIME}" \
             -o build/linux/offgrid ./cmd/offgrid
           
-          # macOS binary
+          # macOS binaries (both architectures)
           GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 go build \
             -ldflags="-s -w -X main.Version=${VERSION} -X main.BuildTime=${BUILD_TIME}" \
-            -o build/macos/offgrid ./cmd/offgrid
+            -o build/macos/offgrid-amd64 ./cmd/offgrid
+          
+          GOOS=darwin GOARCH=arm64 CGO_ENABLED=0 go build \
+            -ldflags="-s -w -X main.Version=${VERSION} -X main.BuildTime=${BUILD_TIME}" \
+            -o build/macos/offgrid-arm64 ./cmd/offgrid
           
           # Windows binary
           GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build \
