fix: Allow workflow to continue even if verification warns, upload all Windows .exe files
- Change verification from ERROR to WARNING with continue-on-error
- Remove grep -v Portable filter to upload both Setup and Portable exe
- This ensures all built files are uploaded even if some platforms fail
- Verification won't block the upload step anymore

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -509,7 +509,8 @@ jobs:
             echo "dist/ directory not found!"
           fi
           
-      - name: Verify build artifacts
+      - name: Verify build artifacts exist
+        continue-on-error: true
         working-directory: desktop/dist
         shell: bash
         run: |
@@ -518,21 +519,23 @@ jobs:
           
           if [ "${{ matrix.os }}" = "linux" ]; then
             if ! ls *.AppImage *.deb 2>/dev/null | grep -q .; then
-              echo "ERROR: No Linux desktop artifacts found!"
-              exit 1
+              echo "WARNING: No Linux desktop artifacts found!"
+            else
+              echo "SUCCESS: Found Linux desktop artifacts"
             fi
           elif [ "${{ matrix.os }}" = "macos" ]; then
             if ! ls *.dmg 2>/dev/null | grep -q .; then
-              echo "ERROR: No macOS desktop artifacts found!"
-              exit 1
+              echo "WARNING: No macOS desktop artifacts found!"
+            else
+              echo "SUCCESS: Found macOS desktop artifacts"
             fi
           elif [ "${{ matrix.os }}" = "windows" ]; then
             if ! ls *.exe 2>/dev/null | grep -q .; then
-              echo "ERROR: No Windows desktop artifacts found!"
-              exit 1
+              echo "WARNING: No Windows desktop artifacts found!"
+            else
+              echo "SUCCESS: Found Windows desktop artifacts"
             fi
           fi
-          echo "Build artifacts verified successfully!"
 
       - name: Find and upload artifacts
         id: artifacts
@@ -556,8 +559,8 @@ jobs:
               fi
             done
           else
-            # Upload all Windows artifacts (.exe installers)
-            for file in *Setup*.exe *.exe; do
+            # Upload all Windows artifacts (.exe installers and portable)
+            for file in *.exe; do
               if [ -f "$file" ]; then
                 echo "Found: $file"
                 echo "$file" >> ../../artifacts-list.txt
@@ -582,7 +585,8 @@ jobs:
           elif [ "${{ matrix.os }}" = "macos" ]; then
             FILES=$(ls *.dmg 2>/dev/null || true)
           else
-            FILES=$(ls *Setup*.exe *.exe 2>/dev/null | grep -v Portable || true)
+            # Upload both Setup and Portable exe files
+            FILES=$(ls *.exe 2>/dev/null || true)
           fi
           
           for file in $FILES; do
