fix: Disable DMG background image to fix macOS build
- Add background: null to prevent looking for missing background.tiff
- Add explicit window dimensions for DMG
- This fixes FileNotFoundError for .background/background.tiff

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -93,6 +93,11 @@
     "dmg": {
       "title": "OffGrid LLM Desktop ${version}",
       "icon": "assets/icon.icns",
+      "background": null,
+      "window": {
+        "width": 540,
+        "height": 380
+      },
       "contents": [
         {
           "x": 130,
