fix: Add background.tiff for DMG installer

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -91,7 +91,24 @@
       "artifactName": "${productName}-${version}-${arch}.${ext}"
     },
     "dmg": {
-      "title": "OffGrid LLM Desktop ${version}"
+      "title": "OffGrid LLM Desktop ${version}",
+      "background": "assets/background.tiff",
+      "window": {
+        "width": 540,
+        "height": 380
+      },
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
     },
     "win": {
       "extraResources": [
