--- a/desktop/package.json
+++ b/desktop/package.json
@@ -91,24 +91,7 @@
       "artifactName": "${productName}-${version}-${arch}.${ext}"
     },
     "dmg": {
-      "title": "OffGrid LLM Desktop ${version}",
-      "background": "assets/background.tiff",
-      "window": {
-        "width": 540,
-        "height": 380
-      },
-      "contents": [
-        {
-          "x": 130,
-          "y": 220
-        },
-        {
-          "x": 410,
-          "y": 220,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
+      "title": "OffGrid LLM Desktop ${version}"
     },
     "win": {
       "extraResources": [
