feat: Update app logo with cyan and navy blue 'O' design and fix DMG build issues
- Created new icon with cyan (#06B6D4) and navy blue (#0f172a) colors
- Generated all required icon formats (.png, .ico, .icns)
- Added electron-builder cache cleanup for macOS builds
- Set DMG format to ULFO to avoid background image issues
- Icons feature modern 'O' design matching app branding

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -480,6 +480,16 @@ jobs:
         working-directory: desktop
         run: npm install
 
+      - name: Clean electron-builder cache
+        if: matrix.os == 'macos'
+        shell: bash
+        run: |
+          # Remove electron-builder cache that might have old DMG settings
+          rm -rf ~/Library/Caches/electron-builder
+          rm -rf ~/.cache/electron-builder
+          rm -rf desktop/node_modules/dmg-builder/.cache
+          echo "Electron-builder cache cleaned"
+
       - name: Prepare architecture-specific binaries (macOS)
         if: matrix.os == 'macos'
         shell: bash
