--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -169,13 +169,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential cmake git
           
-          # Install Vulkan SDK if needed
+          # Install Vulkan SDK if needed (using Ubuntu's native packages)
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
-            sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list \
-              https://packages.lunarg.com/vulkan/lunarg-vulkan-jammy.list
-            sudo apt-get update
-            sudo apt-get install -y vulkan-sdk
+            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools
           fi
 
       - name: Install dependencies (macOS)
