Fix Vulkan: Add libshaderc-dev for glslc compiler
- glslang-tools provides glslangValidator, not glslc
- libshaderc-dev provides the glslc shader compiler
- Both packages needed for complete Vulkan support

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -171,7 +171,7 @@ jobs:
           
           # Install Vulkan SDK if needed (using Ubuntu's native packages)
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools
+            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools libshaderc-dev glslang-tools
           fi
 
       - name: Install dependencies (macOS)
