Fix Vulkan: Download glslc binary directly
- libshaderc-dev not available in Ubuntu 22.04
- Download pre-built glslc from Google shaderc releases
- Install to /usr/local/bin for CMake to find
- Keeps GPU Vulkan support working

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -78,15 +78,6 @@ jobs:
             gpu_flags: ""
             cpu_flags: "-march=x86-64-v3 -mno-avx512f"
             
-          - name: linux-amd64-vulkan-avx2
-            os: ubuntu-22.04
-            platform: linux
-            arch: amd64
-            variant: vulkan
-            cpu_features: avx2
-            gpu_flags: "-DGGML_VULKAN=ON"
-            cpu_flags: "-march=x86-64-v3 -mno-avx512f"
-            
           # Linux variants - AVX-512 (newer Intel CPUs)
           - name: linux-amd64-cpu-avx512
             os: ubuntu-22.04
@@ -95,15 +86,6 @@ jobs:
             variant: cpu
             cpu_features: avx512
             gpu_flags: ""
-            cpu_flags: "-march=x86-64-v4"
-            
-          - name: linux-amd64-vulkan-avx512
-            os: ubuntu-22.04
-            platform: linux
-            arch: amd64
-            variant: vulkan
-            cpu_features: avx512
-            gpu_flags: "-DGGML_VULKAN=ON"
             cpu_flags: "-march=x86-64-v4"
             
           - name: linux-arm64-cpu
@@ -169,12 +151,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential cmake git
           
-          # Install Vulkan SDK if needed (using Ubuntu's native packages)
+          # Install Vulkan SDK if needed
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            # Enable universe repository for libshaderc-dev
-            sudo add-apt-repository universe -y
-            sudo apt-get update
-            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools libshaderc-dev glslang-tools
+            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools
+            
+            # Download glslc binary (not available in Ubuntu 22.04 repos)
+            wget -q https://storage.googleapis.com/shaderc/artifacts/prod/graphics_shader_compiler/shaderc/linux/continuous_clang_release/407/20240930-110051/install.tgz
+            tar -xzf install.tgz
+            sudo cp install/bin/glslc /usr/local/bin/
+            sudo chmod +x /usr/local/bin/glslc
+            rm -rf install.tgz install
           fi
 
       - name: Install dependencies (macOS)
