Fix glslc build: Use make install instead of manual copy
- glslc is an executable target, not just a library
- Use 'make install' to properly install all binaries
- Installs to /usr/local/bin automatically
- Simpler and more reliable than manual cp

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -178,9 +178,9 @@ jobs:
             cd /tmp/shaderc
             ./utils/git-sync-deps
             mkdir build && cd build
-            cmake -DCMAKE_BUILD_TYPE=Release -DSHADERC_SKIP_TESTS=ON ..
-            make -j$(nproc) glslc
-            sudo cp glslc/glslc /usr/local/bin/
+            cmake -DCMAKE_BUILD_TYPE=Release -DSHADERC_SKIP_TESTS=ON -DSHADERC_SKIP_INSTALL=OFF ..
+            make -j$(nproc)
+            sudo make install
             cd / && rm -rf /tmp/shaderc
           fi
 
