Fix: Install glslc package for Vulkan shader compiler
- Package name is 'glslc' in Ubuntu 24.04
- Provides /usr/bin/glslc binary that CMake requires
- Tested with Ubuntu 24.04 docker image

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -171,7 +171,7 @@ jobs:
           
           # Install Vulkan SDK if needed
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools shaderc
+            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools glslc
           fi
 
       - name: Install dependencies (macOS)
