Use macos-15 instead of macos-15-large (requires payment)
- macos-15-large requires billing/payment
- macos-15 is free tier runner
- Still supports Intel x86_64 builds

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -126,7 +126,7 @@ jobs:
             cpu_flags: "-mcpu=apple-m1"
             
           - name: darwin-amd64-cpu
-            os: macos-15-large
+            os: macos-15
             platform: darwin
             arch: amd64
             variant: cpu
